- Stars now have bots that will spawn and help mine for stars higher than level 5.
- Barrows equipment now lasts for 15 hours of combat instead of 40 minutes of combat.
- Fix granting hp xp on controlled
- Implemented HCIM Rework
< --- ABOVE Released December 15, 2021 https://gitlab.com/2009scape/2009scape/-/tags/Dec-15-2021 ---- >
- Implemented server performance monitor, many performance improvements
- Fishing and fishing trawler now use closer-to-empirical formulae.
- Server configuration language has been changed from JSON to TOML.
- Add Family Crest quest.
- Add mort myre stems and pears to bloom's effect, and add the sound effect for bloom.
- Add proper sound effects for the explorer's ring and fix leaf-bladed sword's sound effects.
- Fix wine of zamorak pickup interaction.
- Static clue drop ids replaced with their level appropriate proxy values
- Fix a bug where clue scrolls were rerolled to easy for most NPCs
- Allow renewing summoning familiars, and make bobs drop items on dismissal even if their owners are ironmen.
- Battlestaves cost 7k from zaff.
- Added Blast Furnace
- Added secondary bank account
- Cleaned up a lot of Seer's Diary tasks
- Corrected timings & animations for producing cannonballs
- Corrected special attack for the enhanced excalibur
- Corrected damage calculations for Ruby Bolts (e) special effect
< --- ABOVE Released January 1st, 2022 https://gitlab.com/2009scape/2009scape/-/tags/Jan-1-2022 ---- >
- Set magic dart base xp to 30 (authenticity fix)
- Removed range strength and prayer bonus from god armour (authenticity fix)
- Can now pickpocket women in ardy (npc ID 25)
- Can now travel on free charter boats without having money in inventory
- Emerald and diamond bracelet enchants no longer produce noted items
- Prevent furnace temperature from going negative and deduplicate bar handling.
- Fix player saves for players who used coal on the conveyer belt before bf-fixes.