@@ -118,8 +118,8 @@ class CanoeInterfaceListeners : InterfaceListener() {
                             PacketRepository.send(MinimapState::class.java, MinimapStateContext(player, 2))
                             player.interfaceManager.hideTabs(0, 1, 2, 3, 4, 5, 6, 11, 12)
                         }
-                        travelAnimDur -> player.properties.teleportLocation = dest
                         travelAnimDur+1 -> {
+                            player.properties.teleportLocation = dest
                             player.interfaceManager.close(Component(Components.CANOE_TRAVEL_758))
                             player.interfaceManager.closeOverlay()
                             player.interfaceManager.openOverlay(Component(Components.FADE_FROM_BLACK_170))
